AX ITM: Cache several object relationships that were not cached in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=240239

Reviewed by Chris Fleizach.

Instead of caching individual relations as separate Vectors of AXIsolatedObjects, this patch uses the new relationships implementation to cache a copy of the AXObjectCache::m_relations in the AXIsolatedTree. This data structure is updated when the AXObjectCache sets the flag m_relationsNeedUpdate and one of the relations properties is requested on the AX thread. This allows for a common implementation for all the methods to retrieve individual relationships, and the main two derived classes AXObject and AXIsolatedObject only override the relatedObjects method.

Canonical link: https://commits.webkit.org/251230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295139 268f45cc-cd09-0410-ab3c-d52691b4dbfc